<resources>
    <string name="app_name">Expenker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="log_out">Log out</string>

    <string name="menu_home">Home</string>
    <string name="menu_upload_expense">Upload a Expense</string>
    <string name="menu_view_expense">View Expenses</string>
    <string name="enter_expense_name">Enter Expense Name</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="capture_image">Capture Image</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="expenker">expenker</string>
</resources>