<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.shinrinyoku.expenker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_upload_expense"
        android:name="com.shinrinyoku.expenker.ui.uploadExpense.UploadExpenseFragment"
        android:label="@string/menu_upload_expense"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_view_expense"
        android:name="com.shinrinyoku.expenker.ui.viewExpense.ViewExpenseFragment"
        android:label="@string/menu_view_expense"
        tools:layout="@layout/fragment_slideshow" />
</navigation>